# python-playwright-helper

./: .env.example  .gitignore  DEBUGGING.md  EXAMPLES.md  INSTALL.md  MANIFEST.in  MIGRATION.md  PROJECT_INFO.md  QUICKSTART.md  README.md  UNIT_TESTS_SUMMARY.md  application.properties.example  pyproject.toml
rest_api_testing/: __init__.py  base_api_test.py  config.py  logging_setup.py
rest_api_testing/auth/: __init__.py  authentication_service.py  decorators.py
rest_api_testing/playwright_api/: __init__.py  async_property.py  playwright_api_request.py  response_validator.py
rest_api_testing/template/: __init__.py  template_service.py
scripts/: README.md  install_playwright.sh  publish_to_proget.sh
templates/: product-create.json.j2  user-create.json.j2  user-data.csv
tests/: __init__.py  conftest.py  example_test.py  test_authentication_service.py  test_base_api_test.py  test_logging_setup.py  test_playwright_api_request.py  test_response_validator.py  test_template_service.py
